--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>金日成小學入學考試</title>
   <script src="http://fb.me/react-0.13.3.min.js"></script>
   <script type="text/javascript" src="build/data.js"></script>
+  <script type="text/javascript" src="http://livejs.com/live.js"></script>
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
