updated React; operational again.

--- a/app/index.html
+++ b/app/index.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html lang="zh-hant">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>金日成小學入學考試</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <script type="text/javascript" src="build/data.js"></script>
-        <script src="bower_components/react/react-with-addons.js"></script>
-        <script type="text/javascript" src="http://livejs.com/live.js"></script>
+        <script src="bower_components/react/react.js"></script>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
-
-        <!-- build:js scripts/vendor/react-with-addons.min.js -->
-        <script src="bower_components/react/react-with-addons.min.js"></script>
-        <!-- endbuild -->
-
-
     </head>
     <body>
-        <div id="app"></div>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <!-- endbower -->
-        <!-- endbuild -->
-
-
         <div id="content"></div>
-        <!-- build:js scripts/app.js -->
-        <script src="scripts/app.js"></script>
-        <!-- endbuild -->
+        <script type="text/javascript" src="build/data.js"></script>
+        <script src="build/main.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
             ga('create', 'UA-64001430-6', 'auto');
             ga('send', 'pageview');
         </script>
