--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="0; url=http://repo.github.io/folder/index.html" />
+<meta http-equiv="refresh" content="0; url=http://initiummedia.github.io/DPRK-test/app/index.html" />
 </html>
