--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
         <title>金日成小學入學考試</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <script src="bower_components/react/react.js"></script>
+        <!--<script src="bower_components/react/react.js"></script>-->
+        <script src="https://fb.me/react-with-addons-0.13.3.min.js"></script>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
     </head>
     <body>
