--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
     </head>
     <body>
         <div id="content"></div>
-        <script type="text/javascript" src="build/data.js"></script>
-        <script src="build/main.js"></script>
+        <div id="fb-root"></div>
+
+        <script type="text/javascript" src="scripts/data-compiled.js"></script>
+        <script src="scripts/main-compiled.js"></script>
+
+        <script>
+            window.fbAsyncInit = function() {
+                FB.init({
+                    appId      : '743206445788490',
+                    xfbml      : true,
+                    version    : 'v2.4'
+                });
+            };
+
+            (function(d, s, id){
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {return;}
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,5 +42,6 @@
             ga('create', 'UA-64001430-6', 'auto');
             ga('send', 'pageview');
         </script>
+
     </body>
 </html>
