--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width">
         <script src="bower_components/react/react.js"></script>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
+        <meta property="wb:webmaster" content="dd0bc0f874eb6b50" />
     </head>
     <body>
         <div id="content"></div>
@@ -19,7 +20,7 @@
         <script>
             window.fbAsyncInit = function() {
                 FB.init({
-                    appId      : '743206445788490',
+                    appId      : '743218035787331',
                     xfbml      : true,
                     version    : 'v2.4'
                 });
