--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width">
         <script src="bower_components/react/react.js"></script>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
-        <meta property="wb:webmaster" content="dd0bc0f874eb6b50" />
+        <meta property="og:title" content="title" />
+        <meta property="og:description" content="description" />
     </head>
     <body>
         <div id="content"></div>
