--- a/app/index.html
+++ b/app/index.html
@@ -2,17 +2,35 @@
 <html lang="zh-hant">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>金日成小學入學考試</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <script src="bower_components/react/react.js"></script>
+        <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
+        <script src="bower_components/react/react.js"></script>
     </head>
     <body>
         <div id="content"></div>
+        <div id="fb-root"></div>
+
         <script type="text/javascript" src="scripts/data-compiled.js"></script>
         <script src="scripts/main-compiled.js"></script>
+
+        <script>
+            window.fbAsyncInit = function() {
+                FB.init({
+                    appId      : '743206445788490',
+                    xfbml      : true,
+                    version    : 'v2.4'
+                });
+            };
+
+            (function(d, s, id){
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {return;}
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,5 +39,6 @@
             ga('create', 'UA-64001430-6', 'auto');
             ga('send', 'pageview');
         </script>
+
     </body>
 </html>
