--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-hant">
     <head>
         <meta charset="utf-8">
-        <title>金日成小學入學考試</title>
+        <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
         <script src="bower_components/react/react.js"></script>
     </head>
