--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
-        <script src="bower_components/react/react.js"></script>
+        <script src="bower_components/react/react.min.js"></script>
     </head>
     <body>
         <div id="content"></div>
