--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="content"></div>
         <div id="fb-root"></div>
 
-        <script type="text/javascript" src="scripts/data_hant-compiled.js"></script>
+        <script type="text/javascript" src="scripts/data_hant-compiled.js" charset="utf-8"></script>
         <script src="scripts/main-compiled.js"></script>
 
         <script>
