--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
-        <script src="bower_components/react/react.js"></script>
+        <script src="bower_components/react/react.min.js"></script>
     </head>
     <body>
         <div id="content"></div>
         <div id="fb-root"></div>
 
-        <script type="text/javascript" src="scripts/data_hant-compiled.js"></script>
+        <script type="text/javascript" src="scripts/data_hant-compiled.js" charset="utf-8"></script>
         <script src="scripts/main-compiled.js"></script>
 
         <script>
