--- a/index_hans.html
+++ b/index_hans.html
@@ -10,8 +10,11 @@
         <div id="content"></div>
         <div id="fb-root"></div>
 
+        <script src="//cdn.rawgit.com/jpillora/xdomain/0.7.3/dist/xdomain.min.js"
+                slave="http://3cf586cb.ngrok.com/proxy.html">
+        </script>
         <script type="text/javascript" src="scripts/data_hans-compiled.js"></script>
-        <script src="scripts/main-compiled.js"></script>
+        <script src="scripts/main.js"></script>
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
