--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
         <script src="//cdn.rawgit.com/jpillora/xdomain/0.7.3/dist/xdomain.min.js"
                 slave="http://3cf586cb.ngrok.com/proxy.html">
         </script>
-        <script type="text/javascript" src="scripts/data_hant-compiled.js" charset="utf-8"></script>
+        <script type="text/javascript" src="scripts/data_hant.js" charset="utf-8"></script>
         <script src="scripts/main.js"></script>
 
         <script>
