--- a/app/index_hans.html
+++ b/app/index_hans.html
@@ -13,7 +13,7 @@
         <script src="//cdn.rawgit.com/jpillora/xdomain/0.7.3/dist/xdomain.min.js"
                 slave="http://3cf586cb.ngrok.com/proxy.html">
         </script>
-        <script type="text/javascript" src="scripts/data_hans-compiled.js"></script>
+        <script type="text/javascript" src="scripts/data_hans.js"></script>
         <script src="scripts/main.js"></script>
 
         <script>
