--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-hant">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
         <script src="bower_components/react/react.min.js"></script>
