--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-hant">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
         <script src="bower_components/react/react.min.js"></script>
@@ -10,8 +10,6 @@
         <div id="content"></div>
         <div id="fb-root"></div>
 
-        <script src="//cdn.rawgit.com/jpillora/xdomain/0.7.3/dist/xdomain.min.js"
-                slave="http://s.init.im:8081/proxy.html"></script>
         <script type="text/javascript" src="scripts/data_hant.js" charset="utf-8"></script>
         <script src="scripts/main.js"></script>
 
