fix simplified Chinese script; add xdomain.

--- a/app/index_hans.html
+++ b/app/index_hans.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-hans">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>朝鮮新知識模擬考試</title>
         <link type="text/css" rel="stylesheet" href="styles/main.css" />
-        <script src="bower_components/react/react.js"></script>
+        <script src="bower_components/react/react.min.js"></script>
     </head>
     <body>
         <div id="content"></div>
         <div id="fb-root"></div>
 
-        <script type="text/javascript" src="scripts/data_hans.js"></script>
+        <script type="text/javascript" src="scripts/data_hans.js" charset="utf-8"></script>
         <script src="scripts/main.js"></script>
 
         <script>
